--- a/tf_heat_tempest_plugin/tests/functional/templates/alarm_heat.yaml
+++ b/tf_heat_tempest_plugin/tests/functional/templates/alarm_heat.yaml
@@ -22,22 +22,22 @@ parameters:
     description: Severity level for the alarm.
     # operations: CRUD
     # required: required
-  alarm_rules_rule_operation:
+  rule_operation:
     type: string
     description: operation to compare operand1 and operand2
     # operations: CRUD
     # required: true
-  alarm_rules_rule_operand1:
+  rule_operand1:
     type: string
-    description: UVE attribute specified in the dotted format. Example: NodeStatus.process_info.process_state
+    description: UVE attribute specified in the dotted format. Example NodeStatus.process_info.process_state
     # operations: CRUD
     # required: true
-  alarm_rules_rule_operand2:
+  rule_operand2_uve_attr:
     type: string
     description: UVE attribute or a json value to compare with the UVE attribute in operand1. null value can be specified to check if operand1 exists using the operator != or ==
     # operations: CRUD
     # required: true
-  alarm_rules_rule_vars:
+  rule_vars:
     type: string
     description: List of UVE attributes that would be useful when the alarm is raised. For example, user may want to raise an alarm if the NodeStatus.process_info.process_state != PROCESS_STATE_RUNNING. But, it would be useful to know the process_name whose state != PROCESS_STATE_RUNNING. This UVE attribute which is neither part of operand1 nor operand2 may be specified in vars
     # operations: CRUD
@@ -66,15 +66,23 @@ resources:
       alarm_severity: { get_param: alarm_severity }
       alarm_rules:
         {
-          alarm_rules_rule:
+          alarm_rules_or_list:
             [{
-              alarm_rules_rule_operation: { get_param: alarm_rules_rule_operation },
-              alarm_rules_rule_operand1: { get_param: alarm_rules_rule_operand1 },
-              alarm_rules_rule_operand2: { get_param: alarm_rules_rule_operand2 },
-              alarm_rules_rule_vars: [{ get_param: alarm_rules_rule_vars }],
-            }],
+              alarm_rules_or_list_and_list:
+                [{
+                  alarm_rules_or_list_and_list_operation: { get_param: rule_operation },
+                  alarm_rules_or_list_and_list_operand1: { get_param: rule_operand1 },
+                  alarm_rules_or_list_and_list_operand2:
+                    {
+                      alarm_rules_or_list_and_list_operand2_uve_attribute: { get_param: rule_operand2_uve_attr },
+                    },
+                  alarm_rules_or_list_and_list_variables: [{ get_param: rule_vars }],
+                }]
+            }]
         }
-      uve_keys: { get_param: uve_keys }
+      uve_keys:
+        {
+          uve_keys_uve_key: [{ get_param: uve_keys }],
+        }
       global_system_config: { get_param: global_system_config }
       project: { get_param: project }
-
