--- a/tf_heat_tempest_plugin/tests/functional/templates/bgp_router_heat.yaml
+++ b/tf_heat_tempest_plugin/tests/functional/templates/bgp_router_heat.yaml
@@ -47,11 +47,11 @@ parameters:
     description: port for the BgpRouter
     # operations: CRUD
     # required: optional
-  bgp_router_parameters_source_port:
-    type: number
-    description: source_port for the BgpRouter
-    # operations: CRUD
-    # required: optional
+#  bgp_router_parameters_source_port:
+#    type: number
+#    description: source_port for the BgpRouter
+#    # operations: CRUD
+#    # required: optional
   bgp_router_parameters_hold_time:
     type: number
     description: hold_time for the BgpRouter
@@ -62,21 +62,21 @@ parameters:
     description: family for the BgpRouter
     # operations: CRUD
     # required: optional
-  bgp_router_parameters_auth_data_key_type:
-    type: string
-    description: key_type for the BgpRouter
-    # operations: CRUD
-    # required: optional
-  bgp_router_parameters_auth_data_key_items_key_id:
-    type: number
-    description: key_id for the BgpRouter
-    # operations: CRUD
-    # required: optional
-  bgp_router_parameters_auth_data_key_items_key:
-    type: string
-    description: key for the BgpRouter
-    # operations: CRUD
-    # required: optional
+#  bgp_router_parameters_auth_data_key_type:
+#    type: string
+#    description: key_type for the BgpRouter
+#    # operations: CRUD
+#    # required: optional
+#  bgp_router_parameters_auth_data_key_items_key_id:
+#    type: number
+#    description: key_id for the BgpRouter
+#    # operations: CRUD
+#    # required: optional
+#  bgp_router_parameters_auth_data_key_items_key:
+#    type: string
+#    description: key for the BgpRouter
+#    # operations: CRUD
+#    # required: optional
   bgp_router_parameters_local_autonomous_system:
     type: number
     description: local_autonomous_system for the BgpRouter
@@ -87,76 +87,76 @@ parameters:
     description: router_type for the BgpRouter
     # operations: CRUD
     # required: optional
-  bgp_router_parameters_gateway_address:
-    type: string
-    description: gateway_address for the BgpRouter
-    # operations: CRUD
-    # required: optional
-  bgp_router_parameters_ipv6_gateway_address:
-    type: string
-    description: ipv6_gateway_address for the BgpRouter
-    # operations: CRUD
-    # required: optional
-  bgp_router_refs:
-    type: string
-    description: bgp_router_refs for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_uuid:
-    type: string
-    description: uuid for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_bgp_router:
-    type: string
-    description: bgp_router for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_admin_down:
-    type: boolean
-    description: admin_down for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_passive:
-    type: boolean
-    description: passive for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_as_override:
-    type: boolean
-    description: as_override for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_hold_time:
-    type: number
-    description: hold_time for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_loop_count:
-    type: number
-    description: loop_count for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_address_families_family:
-    type: string
-    description: family for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_auth_data_key_type:
-    type: string
-    description: key_type for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_auth_data_key_items_key_id:
-    type: number
-    description: key_id for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_auth_data_key_items_key:
-    type: string
-    description: key for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_family_attributes_address_family:
-    type: string
-    description: address_family for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_family_attributes_loop_count:
-    type: number
-    description: loop_count for the BgpRouter
-    # required: optional
-  bgp_router_refs_data_session_attributes_family_attributes_prefix_limit_maximum:
-    type: number
-    description: maximum for the BgpRouter
-    # required: optional
+#  bgp_router_parameters_gateway_address:
+#    type: string
+#    description: gateway_address for the BgpRouter
+#    # operations: CRUD
+#    # required: optional
+#  bgp_router_parameters_ipv6_gateway_address:
+#    type: string
+#    description: ipv6_gateway_address for the BgpRouter
+#    # operations: CRUD
+#    # required: optional
+#  bgp_router_refs:
+#    type: string
+#    description: bgp_router_refs for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_uuid:
+#    type: string
+#    description: uuid for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_bgp_router:
+#    type: string
+#    description: bgp_router for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_admin_down:
+#    type: boolean
+#    description: admin_down for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_passive:
+#    type: boolean
+#    description: passive for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_as_override:
+#    type: boolean
+#    description: as_override for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_hold_time:
+#    type: number
+#    description: hold_time for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_loop_count:
+#    type: number
+#    description: loop_count for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_address_families_family:
+#    type: string
+#    description: family for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_auth_data_key_type:
+#    type: string
+#    description: key_type for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_auth_data_key_items_key_id:
+#    type: number
+#    description: key_id for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_auth_data_key_items_key:
+#    type: string
+#    description: key for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_family_attributes_address_family:
+#    type: string
+#    description: address_family for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_family_attributes_loop_count:
+#    type: number
+#    description: loop_count for the BgpRouter
+#    # required: optional
+#  bgp_router_refs_data_session_attributes_family_attributes_prefix_limit_maximum:
+#    type: number
+#    description: maximum for the BgpRouter
+#    # required: optional
   routing_instance:
     type: string
     description: routing_instance for the BgpRouter
@@ -177,64 +177,63 @@ resources:
           bgp_router_parameters_identifier: { get_param: bgp_router_parameters_identifier },
           bgp_router_parameters_address: { get_param: bgp_router_parameters_address },
           bgp_router_parameters_port: { get_param: bgp_router_parameters_port },
-          bgp_router_parameters_source_port: { get_param: bgp_router_parameters_source_port },
+#          bgp_router_parameters_source_port: { get_param: bgp_router_parameters_source_port },
           bgp_router_parameters_hold_time: { get_param: bgp_router_parameters_hold_time },
           bgp_router_parameters_address_families:
             {
               bgp_router_parameters_address_families_family: [{ get_param: bgp_router_parameters_address_families_family }],
             },
-          bgp_router_parameters_auth_data:
-            {
-              bgp_router_parameters_auth_data_key_type: { get_param: bgp_router_parameters_auth_data_key_type },
-              bgp_router_parameters_auth_data_key_items:
-                [{
-                  bgp_router_parameters_auth_data_key_items_key_id: { get_param: bgp_router_parameters_auth_data_key_items_key_id },
-                  bgp_router_parameters_auth_data_key_items_key: { get_param: bgp_router_parameters_auth_data_key_items_key },
-                }],
-            },
+#          bgp_router_parameters_auth_data:
+#            {
+#              bgp_router_parameters_auth_data_key_type: { get_param: bgp_router_parameters_auth_data_key_type },
+#              bgp_router_parameters_auth_data_key_items:
+#                [{
+#                  bgp_router_parameters_auth_data_key_items_key_id: { get_param: bgp_router_parameters_auth_data_key_items_key_id },
+#                  bgp_router_parameters_auth_data_key_items_key: { get_param: bgp_router_parameters_auth_data_key_items_key },
+#                }],
+#            },
           bgp_router_parameters_local_autonomous_system: { get_param: bgp_router_parameters_local_autonomous_system },
           bgp_router_parameters_router_type: { get_param: bgp_router_parameters_router_type },
-          bgp_router_parameters_gateway_address: { get_param: bgp_router_parameters_gateway_address },
-          bgp_router_parameters_ipv6_gateway_address: { get_param: bgp_router_parameters_ipv6_gateway_address },
+#          bgp_router_parameters_gateway_address: { get_param: bgp_router_parameters_gateway_address },
+#          bgp_router_parameters_ipv6_gateway_address: { get_param: bgp_router_parameters_ipv6_gateway_address },
         }
-      bgp_router_refs: [{ get_param: bgp_router_refs }]
-      bgp_router_refs_data:
-        [{
-          bgp_router_refs_data_session:
-            [{
-              bgp_router_refs_data_session_uuid: { get_param: bgp_router_refs_data_session_uuid },
-              bgp_router_refs_data_session_attributes:
-                [{
-                  bgp_router_refs_data_session_attributes_bgp_router: { get_param: bgp_router_refs_data_session_attributes_bgp_router },
-                  bgp_router_refs_data_session_attributes_admin_down: { get_param: bgp_router_refs_data_session_attributes_admin_down },
-                  bgp_router_refs_data_session_attributes_passive: { get_param: bgp_router_refs_data_session_attributes_passive },
-                  bgp_router_refs_data_session_attributes_as_override: { get_param: bgp_router_refs_data_session_attributes_as_override },
-                  bgp_router_refs_data_session_attributes_hold_time: { get_param: bgp_router_refs_data_session_attributes_hold_time },
-                  bgp_router_refs_data_session_attributes_loop_count: { get_param: bgp_router_refs_data_session_attributes_loop_count },
-                  bgp_router_refs_data_session_attributes_address_families:
-                    {
-                      bgp_router_refs_data_session_attributes_address_families_family: [{ get_param: bgp_router_refs_data_session_attributes_address_families_family }],
-                    },
-                  bgp_router_refs_data_session_attributes_auth_data:
-                    {
-                      bgp_router_refs_data_session_attributes_auth_data_key_type: { get_param: bgp_router_refs_data_session_attributes_auth_data_key_type },
-                      bgp_router_refs_data_session_attributes_auth_data_key_items:
-                        [{
-                          bgp_router_refs_data_session_attributes_auth_data_key_items_key_id: { get_param: bgp_router_refs_data_session_attributes_auth_data_key_items_key_id },
-                          bgp_router_refs_data_session_attributes_auth_data_key_items_key: { get_param: bgp_router_refs_data_session_attributes_auth_data_key_items_key },
-                        }],
-                    },
-                  bgp_router_refs_data_session_attributes_family_attributes:
-                    [{
-                      bgp_router_refs_data_session_attributes_family_attributes_address_family: { get_param: bgp_router_refs_data_session_attributes_family_attributes_address_family },
-                      bgp_router_refs_data_session_attributes_family_attributes_loop_count: { get_param: bgp_router_refs_data_session_attributes_family_attributes_loop_count },
-                      bgp_router_refs_data_session_attributes_family_attributes_prefix_limit:
-                        {
-                          bgp_router_refs_data_session_attributes_family_attributes_prefix_limit_maximum: { get_param: bgp_router_refs_data_session_attributes_family_attributes_prefix_limit_maximum },
-                        },
-                    }],
-                }],
-            }],
-        }]
+#      bgp_router_refs: [{ get_param: bgp_router_refs }]
+#      bgp_router_refs_data:
+#        [{
+#          bgp_router_refs_data_session:
+#            [{
+#              bgp_router_refs_data_session_uuid: { get_param: bgp_router_refs_data_session_uuid },
+#              bgp_router_refs_data_session_attributes:
+#                [{
+#                  bgp_router_refs_data_session_attributes_bgp_router: { get_param: bgp_router_refs_data_session_attributes_bgp_router },
+#                  bgp_router_refs_data_session_attributes_admin_down: { get_param: bgp_router_refs_data_session_attributes_admin_down },
+#                  bgp_router_refs_data_session_attributes_passive: { get_param: bgp_router_refs_data_session_attributes_passive },
+#                  bgp_router_refs_data_session_attributes_as_override: { get_param: bgp_router_refs_data_session_attributes_as_override },
+#                  bgp_router_refs_data_session_attributes_hold_time: { get_param: bgp_router_refs_data_session_attributes_hold_time },
+#                  bgp_router_refs_data_session_attributes_loop_count: { get_param: bgp_router_refs_data_session_attributes_loop_count },
+#                  bgp_router_refs_data_session_attributes_address_families:
+#                    {
+#                      bgp_router_refs_data_session_attributes_address_families_family: [{ get_param: bgp_router_refs_data_session_attributes_address_families_family }],
+#                    },
+#                  bgp_router_refs_data_session_attributes_auth_data:
+#                    {
+#                      bgp_router_refs_data_session_attributes_auth_data_key_type: { get_param: bgp_router_refs_data_session_attributes_auth_data_key_type },
+#                      bgp_router_refs_data_session_attributes_auth_data_key_items:
+#                        [{
+#                          bgp_router_refs_data_session_attributes_auth_data_key_items_key_id: { get_param: bgp_router_refs_data_session_attributes_auth_data_key_items_key_id },
+#                          bgp_router_refs_data_session_attributes_auth_data_key_items_key: { get_param: bgp_router_refs_data_session_attributes_auth_data_key_items_key },
+#                        }],
+#                    },
+#                  bgp_router_refs_data_session_attributes_family_attributes:
+#                    [{
+#                      bgp_router_refs_data_session_attributes_family_attributes_address_family: { get_param: bgp_router_refs_data_session_attributes_family_attributes_address_family },
+#                      bgp_router_refs_data_session_attributes_family_attributes_loop_count: { get_param: bgp_router_refs_data_session_attributes_family_attributes_loop_count },
+#                      bgp_router_refs_data_session_attributes_family_attributes_prefix_limit:
+#                        {
+#                          bgp_router_refs_data_session_attributes_family_attributes_prefix_limit_maximum: { get_param: bgp_router_refs_data_session_attributes_family_attributes_prefix_limit_maximum },
+#                        },
+#                    }],
+#                }],
+#            }],
+#        }]
       routing_instance: { get_param: routing_instance }
-
